# baseball-crawl

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Dockerfile  E-051-055-holistic-review.md  claude-review-e100.md  codex-review-e100-findings-medium.md  codex-review-e100-findings.md  codex-review-e100.md  codex-spec-review-e123-findings.md  codex-spec-review-e123.md  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.claude/: settings.json
.codex/: config.toml
.devcontainer/: devcontainer.json  post-create-env.sh  tmux.conf
.githooks/: pre-commit
.project/: codex-review.md  codex-spec-review.md
config/: teams.yaml
docs/: E-221-HANDOFF.md  VISION.md  agent-browsability-workflow.md  cloudflare-access-setup.md  database-restore.md  gamechanger-api.md  gamechanger-stat-glossary.md  http-integration-guide.md  production-deployment.md  safe-data-handling.md  vision-signals.md
ephemeral/: README.md
migrations/: 001_initial_schema.sql  002_add_our_team_id_to_reports.sql  002_add_user_role.sql  003_add_crawl_jobs.sql  003_auth.sql  004_coaching_assignments.sql  005_teams_public_id.sql  006_opponent_links.sql  007_scouting_runs.sql  008_reports.sql  008_teams_gc_uuid.sql  009_plays_play_events.sql  012_reconciliation_discrepancies.sql  014_add_game_start_time.sql  015_add_appearance_order.sql  apply_migrations.py
proxy/: .env.example  .gitignore  README.md  docker-compose.yml  logs.sh  proxy-entrypoint.sh  start.sh  status.sh  stop.sh
(+2450 files in other folders)
