[project]
name = "baseball-crawl"
version = "0.1.0"
requires-python = ">=3.13"

# Runtime dependencies -- keep in sync with requirements.in
dependencies = [
    "httpx>=0.28",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "starlette>=0.41",
    "jinja2>=3.1",
    "aiofiles>=24.1",
    "python-multipart>=0.0.20",
    "webauthn>=2.2",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "typer[all]>=0.9",
    "brotlicffi>=1.0",
    "matplotlib>=3.9",
    "numpy>=2.0",
]

[project.scripts]
bb = "src.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "migrations*"]

[tool.pytest.ini_options]
timeout = 30
